Closed Bug 1510472 Opened 7 years ago Closed 7 years ago

Crash in nsTDependentString<T>::nsTDependentString<T> via nsMapiHook::BlindSendMail

Categories

(MailNews Core :: Simple MAPI, defect)

x86
Windows
defect
Not set
critical

Tracking

(thunderbird_esr6064+ fixed, thunderbird64 fixed, thunderbird65 fixed)

RESOLVED FIXED
Thunderbird 65.0
Tracking Status
thunderbird_esr60 64+ fixed
thunderbird64 --- fixed
thunderbird65 --- fixed

People

(Reporter: wsmwk, Assigned: jorgk-bmo)

Details

(Keywords: crash)

Crash Data

Attachments

(1 file, 1 obsolete file)

About 20% of the nsTDependentString crashes are via nsMapiHook::BlindSendMail. (~20% are another whose bug will be filed after this. The majority are Bug 1510028) This bug was filed from the Socorro interface and is report bp-ef78a1d7-9ae7-46e8-8a0d-85eef0181126. ============================================================= Top 10 frames of crashing thread: 0 xul.dll nsTDependentString<char16_t>::nsTDependentString<char16_t> xpcom/string/nsTDependentString.h:80 1 xul.dll nsMapiHook::BlindSendMail comm/mailnews/mapi/mapihook/src/msgMapiHook.cpp:318 2 xul.dll CMapiImp::SendMail comm/mailnews/mapi/mapihook/src/msgMapiImp.cpp:225 3 rpcrt4.dll Invoke 4 rpcrt4.dll _imp_load__FreeAddrInfoW 5 ole32.dll ole32.dll@0x13e7e5 6 ole32.dll ChannelProcessUninitialize 7 ole32.dll ole32.dll@0x66628 8 ole32.dll CreateChannelWrapper 9 ole32.dll CCtxComChnl::ContextInvoke ============================================================= bp-3de6849f-ca6f-45d4-a747-7a27c0181121
Attached patch 1510472-crash.patch (obsolete) — Splinter Review
More of what was fixed in bug 1510028.
Assignee: nobody → jorgk
Attachment #9028118 - Flags: review?(mkmelin+mozilla)
Oops, unrelated changes crept in.
Attachment #9028118 - Attachment is obsolete: true
Attachment #9028118 - Flags: review?(mkmelin+mozilla)
Attachment #9028119 - Flags: review?(mkmelin+mozilla)
Comment on attachment 9028119 [details] [diff] [review] 1510472-crash.patch Review of attachment 9028119 [details] [diff] [review]: ----------------------------------------------------------------- LGTM, r=mkmelin
Attachment #9028119 - Flags: review?(mkmelin+mozilla) → review+
Pushed by mozilla@jorgk.com: https://hg.mozilla.org/comm-central/rev/e5ce0ede4824 Add null check to avoid crash due to nsDependentCString(null). r=mkmelin DONTBUILD
Status: NEW → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → Thunderbird 65.0
Attachment #9028119 - Flags: approval-comm-esr60+
Attachment #9028119 - Flags: approval-comm-beta+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: