Bug 1510472 - Add null check to avoid crash due to nsDependentCString(null). r=mkmelin DONTBUILD